--- a/source/catalog.html
+++ b/source/catalog.html
@@ -23,7 +23,8 @@
         <img class="logo__image" src="img/icons/logo_desktop.svg" width="57" height="22"
           alt="Туристическая компания Путешествия по Европе" />
       </a>
-      <p class="catalog__message">Страница находится в разработке</p>
+      <p class="catalog__message">Совсем скоро здесь появится информация о выбранном Вами путешествии</p>
+      <a class="catalog__link" href="index.html">На главную</a>
     </div>
   </body>
 </html>
