--- a/source/Index.html
+++ b/source/Index.html
@@ -18,7 +18,7 @@
 </head>
 
   <body class="page-body">
-    <header class="page-header page-header--no-js">
+    <header class="page-header">
       <div class="logo-wrapper">
         <a class="logo" href="">
           <picture>
@@ -29,8 +29,8 @@
           </picture>
         </a>
         <nav class="nav">
-          <button class="nav__button " type="button"></button>
-          <ul class="nav__list">
+          <button class="nav__button nav__button--no-js" type="button"></button>
+          <ul class="nav__list nav__list--no-js">
             <li class="nav__list-item">
               <a class="nav__list-link" href="#places">О путешествии</a>
             </li>
@@ -120,27 +120,27 @@
         <article class="tabs__countries countries">
           <div class="container">
             <ul class="countries__nav">
-              <li class="countries__nav-item" id="tab1">
+              <a class="countries__nav-item" id="tab1" href="#country1">
                 <span class="countries__nav-text countries__nav-text--active">Греция</span>
-              </li>
-              <li class="countries__nav-item" id="tab2">
+              </a>
+              <a class="countries__nav-item" id="tab2" href="#country2">
                 <span class="countries__nav-text">Албания</span>
-              </li>
-              <li class="countries__nav-item" id="tab3">
+              </a>
+              <a class="countries__nav-item" id="tab3" href="#country3">
                 <span class="countries__nav-text">Македония</span>
-              </li>
-              <li class="countries__nav-item" id="tab4">
+              </a>
+              <a class="countries__nav-item" id="tab4" href="#country4">
                 <span class="countries__nav-text">Черногория</span>
-              </li>
-              <li class="countries__nav-item" id="tab5">
+              </a>
+              <a class="countries__nav-item" id="tab5" href="#country5">
                 <span class="countries__nav-text">Хорватия</span>
-              </li>
+              </a>
             </ul>
           </div>
 
           <div class="countries__swiper">
             <div class="countries__swiper-wrapper">
-              <div class="countries__item country">
+              <div class="countries__item country" id="country1">
                 <div class="container container--country">
                   <div class="country__wrapper">
                     <h2 class="country__title">Греция</h2>
@@ -150,7 +150,7 @@
                       и обломочной горной породы, достигающих в высоту 600 метров, наградой будет неописуемая красота
                       природы и атмосфера, царящая в монастырях Метеоры.
                     </p>
-                    <a class="country__link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                    <a class="country__link" href="#popup">Купить тур сейчас</a>
                   </div>
                   <div class="country__feedbacks feedbacks">
                     <div class="feedbacks__background"></div>
@@ -172,7 +172,7 @@
                 </div>
               </div>
 
-              <div class="countries__item country visually-hidden">
+              <div class="countries__item country" id="country2">
                 <div class="container container--country">
                   <div class="country__wrapper">
                     <h2 class="country__title">Албания</h2>
@@ -180,7 +180,7 @@
                       Вначале кажется, что на пляже вас встречает обычный, правда невероятно белоснежный и слишком крупный песок. Однако, присмотревшись,
                       можно понять, что это не песок, а камни, перетёртые до такого мелкого состояния.
                     </p>
-                    <a class="country__link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                    <a class="country__link" href="#popup">Купить тур сейчас</a>
                   </div>
                   <div class="country__feedbacks feedbacks">
                     <div class="feedbacks__background"></div>
@@ -201,7 +201,7 @@
                 </div>
               </div>
 
-              <div class="countries__item country visually-hidden">
+              <div class="countries__item country" id="country3">
                 <div class="container container--country">
                   <div class="country__wrapper">
                     <h2 class="country__title">Македония</h2>
@@ -209,7 +209,7 @@
                       лесистой местности возле Охридского озера и Самуиловой твердыни. А также мы заберемся на вершину горы Татичев Камен,
                       где находится археологический памятник Кокино в длину около 100 метров.
                     </p>
-                    <a class="country__link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                    <a class="country__link" href="#popup">Купить тур сейчас</a>
                   </div>
                   <div class="country__feedbacks feedbacks">
                     <div class="feedbacks__background"></div>
@@ -230,14 +230,14 @@
                 </div>
               </div>
 
-              <div class="countries__item country visually-hidden">
+              <div class="countries__item country" id="country4">
                 <div class="container container--country">
                   <div class="country__wrapper">
                     <h2 class="country__title">Черногория</h2>
                     <p class="country__text">Черногория удивит нас самым большим в Европе каньоном реки Тара, который в некоторых местах высотой
                       берегов доходит до 1300 метров, а шириной не превышает трех. При этом длина каньона составляет 80 км.
                     </p>
-                    <a class="country__link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                    <a class="country__link" href="#popup">Купить тур сейчас</a>
                   </div>
                   <div class="country__feedbacks feedbacks">
                     <div class="feedbacks__background"></div>
@@ -247,7 +247,7 @@
                       </p>
                       <div class="feedbacks__user-wrapper">
                         <picture>
-                          <img class="feedbacks__user-photo" src="img/user_image.jpg" srcset="img/user_image@2x.jpg 2x" width="37" height="38"
+                          <img class="feedbacks__user-photo" src="img/user_image4.jpg" srcset="img/user_image4@2x.jpg 2x" width="37" height="38"
                           alt="Фото пользователя">
                         </picture>
                         <span class="feedbacks__user-name">Анастасия Мей</span>
@@ -257,7 +257,7 @@
                 </div>
               </div>
 
-              <div class="countries__item country visually-hidden">
+              <div class="countries__item country" id="country5">
                 <div class="container container--country">
                   <div class="country__wrapper">
                     <h2 class="country__title">Хорватия</h2>
@@ -265,7 +265,7 @@
                       метровую глубину через 5 освещенных залов, украшенных удивительными нерукотворными скульптурами —  сталактитами и
                       сталагмитами —  формировавшимися тысячи и тысячи лет.
                     </p>
-                    <a class="country__link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                    <a class="country__link" href="#popup">Купить тур сейчас</a>
                   </div>
                   <div class="country__feedbacks feedbacks">
                     <div class="feedbacks__background"></div>
@@ -315,7 +315,7 @@
                   <li class="rate__feature-list-item">Завтраки, ужины в отелях и ланчи на природе</li>
                   <li class="rate__feature-list-item">Экскурсии по удивительно красивым местам Европы</li>
                 </ul>
-                <a class="rate__feature-link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                <a class="rate__feature-link" href="#popup">Купить тур сейчас</a>
               </li>
               <li class="prices__rates-item rate">
                 <div class="rate__wrapper">
@@ -330,18 +330,18 @@
                   <li class="rate__feature-list-item">Только завтраки в отелях</li>
                   <li class="rate__feature-list-item">Экскурсии по удивительно красивым местам Европы</li>
                 </ul>
-                <a class="rate__feature-link" href="javascript: void OpenPopup();">Купить тур сейчас</a>
+                <a class="rate__feature-link" href="#popup">Купить тур сейчас</a>
               </li>
             </ul>
           </div>
         </article>
       </section>
 
-      <section class="popup">
+      <section class="popup popup--no-js" id="popup">
         <div class="popup__wrapper">
           <button class="popup__close popup__close--no-js" type="button"></button>
           <h3 class="popup__title">Купить тур</h3>
-          <form class="popup__form form" action="https://echo.htmlacademy.ru" method="post">
+          <form class="popup__form form" action="https://echo.htmlacademy.ru" method="post" autocomplete="off">
             <label class="visually-hidden form__label-phone" for="form-phone-modal"></label>
             <input class="form__input form__input--phone" type="text" id="form-phone-modal" name="form-phone-modal" placeholder="+7 Введите 10 цифр номера" required>
             <label class="visually-hidden" for="form-email-modal"></label>
@@ -356,7 +356,7 @@
           <div class="questions__wrapper">
             <h3 class="questions__title">У Вас остались вопросы?</h3>
             <span class="questions__text">Оставьте свой номер или e-mail и мы свяжемся с Вами</span>
-            <form class="questions__form form form--questions" action="https://echo.htmlacademy.ru" method="post">
+            <form class="questions__form form form--questions" action="https://echo.htmlacademy.ru" method="post" autocomplete="off">
               <label class="visually-hidden form__label-phone" for="form-phone"></label>
               <input class="form__input form__input--phone form__input--questions" type="text" id="form-phone" name="form-phone" placeholder="+7&ensp;Введите 10 цифр номера" required>
               <label class="visually-hidden" for="form-email"></label>
